src/test/ui/conservative_impl_trait.stderr
error[E0277]: `()` is not an iterator
  --> $DIR/conservative_impl_trait.rs:3:33
   |
LL | fn will_ice(something: &u32) -> impl Iterator<Item = &u32> {
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ `()` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `()`

error[E0277]: `()` is not an iterator
  --> $DIR/conservative_impl_trait.rs:3:60
   |
LL |   fn will_ice(something: &u32) -> impl Iterator<Item = &u32> {
   |  ____________________________________________________________^
LL | |
LL | |
LL | | }
   | |_^ `()` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `()`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
